# week1

./: README.md  比赛分析.md
segment/: CMakeLists.txt
segment/src/: main.cpp  segment.cpp
task3/: CMakeLists.txt  main.cpp
